static/style.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');

:root {
  --font-family: 'Josefin Sans', sans-serif;
  --transition: 1s ease;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: var(--font-family);
}

.dark-mode {
  background-color: black;
  color: white;
}

body {
  width: 1200px;
  font-size: 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: column;
  margin: 0 auto;
  padding: 10px 20px;
  transition: var(--transition);
}

header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 20px auto;
  padding: 10px;
  width: 90%;
}

header .theme-modes {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 10px;
  width: 10%;
  z-index: 5;
  cursor: pointer;
  transition: var(--transition);
}

header .theme-modes p {
  font-size: 10px;
  color: black;
  border-radius: 10px;
  padding: 3px 0;
  display: none;
  transition: var(--transition);
}
header .theme-modes:hover p {
  display: flex;
}
body.dark-mode .theme-modes:hover p {
  color: white;
}

header .theme-modes .sunny {
  display: none;
}
header .theme-modes.active .sunny {
  display: flex;
}
header .theme-modes.active .moon {
  display: none;
}

.container {
  width: 90%;
  margin: 20px auto;
  padding: 30px;
  border-radius: 10px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: column;
  transition: var(--transition);
}
.container.dark-mode {
  box-shadow: 0 0 20px rgb(255, 255, 255);
}

.container .upper {
  width: 85%;
  display: grid;
  place-items: center;
}

.container form {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.container form .left {
  width: 70%;
}

.container form .left textarea {
  width: 100%;
  padding: 10px;
  font-size: 24px;
  border: 1px solid black;
  border-radius: 10px;
  outline: none;
  resize: none;
}

.container form .right {
  height: 90%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: column;
}

.container form .right select {
  padding: 4px 8px;
}

.container form .right input {
  width: 100%;
  padding: 5px 15px;
  border-radius: 10px;
  border: none;
  background-color: black;
  color: white;
  font-size: 16px;
  cursor: pointer;
}
.container.dark-mode form .right input {
  background-color: white;
  color: black;
}

.line {
  width: 80%;
  background-color: black;
  height: 1px;
  margin: 25px auto;
}
body.dark-mode .line {
  background-color: white;
}

.container .lower {
  max-width: 90%;
  overflow-x: auto;
}

.container .lower pre {
  width: 100%;
  line-height: 1.2;
  white-space: pre;
  word-wrap: break-word;
  font-family: monospace;
  word-spacing: normal;
  word-break: normal;
}

footer {
  position: fixed;
  bottom: 20px;
  left: 20px;
  margin: 20px auto 0;
}

footer a {
  color: black;
  cursor: pointer;
}
body.dark-mode footer a {
  color: white;
}

